--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="message">Watch face tapped</string>
     <string name="my_analog_name">Analog</string>
     <string name="analog_config_name">Config</string>
+    <string name="preference_file_key" translatable="false">fr.alexisbn.awatch.sharedprefs</string>
 </resources>
