- the selected accent color will now be used instead of the default color - when tapping the watch face, an update of accentColor and prideRing is forced - added new icons for complications selectors (and removed old ones) - updated ring icon to the correct variant - added proper watch preview - renamed watch face

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">aWatch</string>
     <string name="message">Watch face tapped</string>
-    <string name="my_analog_name">Analog</string>
+    <string name="my_analog_name">aWatch</string>
     <string name="analog_config_name">Config</string>
     <string name="preference_file_key" translatable="false">fr.alexisbn.awatch.sharedprefs</string>
 </resources>
